# ItemShop

./: .gitignore  AGENTS.md  AI_PARTNER.md  CLAUDE.md  CURRENT_BUILD.md  IMPLEMENTATION_REPORT.md  LOCATION_PARTNER_PROMPT.md  NEXT_TASKS.md  PLAYTEST_NOTES.md  README.md  SPRITE_REVIEW.md  export_presets.cfg  project.godot  pyproject.toml  requirements.txt
autoload/: audio_manager.gd  audio_manager.gd.uid  boom_manager.gd  boom_manager.gd.uid  bridge_manager.gd  bridge_manager.gd.uid  content_database.gd  content_database.gd.uid  debug_manager.gd  debug_manager.gd.uid  dev_hub_manager.gd  dev_hub_manager.gd.uid  dungeon_manager.gd  dungeon_manager.gd.uid  economy_manager.gd  economy_manager.gd.uid  game_state.gd  game_state.gd.uid  inventory_manager.gd  inventory_manager.gd.uid  market_manager.gd  market_manager.gd.uid  multiplayer_state.gd  multiplayer_state.gd.uid  pad_nav.gd  pad_nav.gd.uid  relationship_manager.gd  relationship_manager.gd.uid  save_manager.gd  save_manager.gd.uid  scene_router.gd  scene_router.gd.uid  shop_furniture_manager.gd  shop_furniture_manager.gd.uid  story_event_manager.gd  story_event_manager.gd.uid  time_manager.gd  time_manager.gd.uid
credits/: ASSET_CREDITS.character.translation  ASSET_CREDITS.contributor.translation  ASSET_CREDITS.csv  ASSET_CREDITS.file.translation  ASSET_CREDITS.permission.translation  ASSET_CREDITS.source.translation  MUSIC_CREDITS.composer.translation  MUSIC_CREDITS.csv  MUSIC_CREDITS.file.translation  MUSIC_CREDITS.license.translation  MUSIC_CREDITS.source.translation  MUSIC_CREDITS.title.translation
(+1322 files in other folders)
