[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-resource-downloader"
version = "0.1.0"
description = "Conservative Playwright downloader for The Spriters Resource game pages."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "playwright==1.48.0",
]

[project.scripts]
sprite-resource-downloader = "sprite_resource_downloader.cli:main"

[tool.setuptools]
packages = ["sprite_resource_downloader"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
markers = [
    "live: optional live integration tests",
]
